<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="191dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="192dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:text="@string/switch2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch3"
        android:layout_width="192dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="164dp"
        android:text="@string/switch3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch4"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="240dp"
        android:text="@string/switch4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch5"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="320dp"
        android:text="@string/switch5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch6"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="16dp"
        android:text="@string/switch6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch7"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="88dp"
        android:text="@string/switch7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch8"
        android:layout_width="204dp"
        android:layout_height="43dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="164dp"
        android:text="@string/switch8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch9"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="244dp"
        android:text="@string/switch9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="640dp"
        android:layout_marginTop="92dp"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="316dp"
        android:layout_height="30dp"
        android:layout_marginStart="544dp"
        android:layout_marginTop="36dp"
        android:text="@string/textView1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>